Minor color contrast fixes for a11y

--- a/tailwind/custom/components/a11yslider.css
+++ b/tailwind/custom/components/a11yslider.css
@@ -5,20 +5,12 @@
 	@apply max-w-full;
 }
 
-/* .a11y-slider-container > button {
-	@apply font-head font-bold border inline-flex items-center justify-center rounded-lg bg-transparent px-5 py-3 mb-2 text-neutral-800/50 border-neutral-800/50 shadow-neutral-800 hover:text-brand-blue hover:border-brand-blue hover:shadow-xl focus:outline-none focus:ring focus:ring-brand-blue-pale/80 active:bg-brand-red-dark active:shadow-sm sm:w-auto lg:text-lg;
-}
-
-.on-darkbg .a11y-slider-container > button {
-	@apply font-head font-bold border inline-flex items-center justify-center rounded-lg bg-transparent px-5 py-3 mb-2 text-neutral-200/50 border-neutral-200/50 shadow-neutral-800 hover:text-white hover:border-white hover:shadow-xl focus:outline-none focus:ring focus:ring-brand-blue-pale/80 active:shadow-sm sm:w-auto lg:text-lg;
-} */
-
 .a11y-slider-container > button {
-	@apply font-head font-bold border rounded-lg bg-transparent px-5 py-3 mb-2 text-neutral-800/50 border-neutral-800/50 shadow-neutral-800 hover:text-brand-blue hover:border-brand-blue hover:shadow-xl focus:outline-none focus:ring focus:ring-brand-blue-pale/80 active:bg-brand-red-dark active:shadow-sm sm:w-auto lg:text-lg dark:border-neutral-400 dark:text-neutral-400;
+	@apply font-head font-semibold border rounded-lg bg-transparent px-5 py-3 mb-2 text-neutral-600 shadow-neutral-800 hover:text-brand-blue hover:border-brand-blue hover:shadow-xl focus:outline-none focus:ring focus:ring-brand-blue-pale/80 active:bg-brand-red-dark active:shadow-sm sm:w-auto lg:text-lg dark:border-neutral-400 dark:text-neutral-400;
 }
 
 .on-darkbg .a11y-slider-container > button {
-	@apply font-head font-bold border rounded-lg bg-transparent px-5 py-3 mb-2 text-neutral-200/50 border-neutral-200/50 shadow-neutral-800 hover:text-white hover:border-white hover:shadow-xl focus:outline-none focus:ring focus:ring-brand-blue-pale/80 active:shadow-sm sm:w-auto lg:text-lg;
+	@apply font-head font-semibold border rounded-lg bg-transparent px-5 py-3 mb-2 text-neutral-400 border-neutral-400 shadow-neutral-800 hover:text-white hover:border-white hover:shadow-xl focus:outline-none focus:ring focus:ring-brand-blue-pale/80 active:shadow-sm sm:w-auto lg:text-lg;
 }
 
 .a11y-slider-next {
